--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "hardhat-project",
+  "name": "marrysign",
+  "version": "0.1.0",
+  "license": "MIT",
+  "scripts": {
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "format": "prettier --write ."
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.0"
+    "hardhat": "^2.12.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
