Simplified npm commands. Temporary disabled timestamp check to simplify things.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "network:run": "hardhat node",
-    "contract:compile": "hardhat compile",
-    "contract:deploy": "hardhat run --network localhost scripts/deploy.ts",
+    "network": "hardhat node",
+    "compile": "hardhat compile",
+    "deploy": "hardhat run --network localhost scripts/deploy.ts",
     "test": "hardhat test",
     "test:gas": "REPORT_GAS=true hardhat test",
     "format": "prettier --write ."
