--- a/package.json
+++ b/package.json
@@ -6,14 +6,31 @@
     "network": "hardhat node",
     "compile": "hardhat compile",
     "deploy": "hardhat run --network localhost scripts/deploy.ts",
+    "lint": "solhint 'contracts/*.sol'",
+    "lint:fix": "solhint 'contracts/**/*.sol' --fix",
     "test": "hardhat test",
     "test:gas": "REPORT_GAS=true hardhat test",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "coverage": "hardhat coverage --solcoverjs ./.solcover.js"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.12.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.8.2",
+    "lint-staged": "^13.0.3"
+  },
+  "lint-staged": {
+    "*.{ts,js,json,yml,yaml}": [
+      "prettier --write"
+    ],
+    "*.sol": [
+      "prettier --write",
+      "solhint"
+    ]
   }
 }
