--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.12.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
@@ -33,8 +35,7 @@
       "prettier --write"
     ],
     "*.sol": [
-      "prettier --write",
-      "solhint"
+      "prettier --write"
     ]
   }
 }
