--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "compile": "hardhat compile",
     "deploy": "hardhat run --network localhost scripts/deploy.ts",
     "deploy:goerli": "hardhat run --network goerli scripts/deploy.ts",
+    "deploy:mumbai": "hardhat run --network polygonMumbai scripts/deploy.ts",
+    "verify:mumbai": "hardhat verify --network polygonMumbai 0xCce4880C3DAf296d87FE710953E12D008608C6A2 '0x0715A7794a1dc8e42615F059dD6e406A6594651A'",
     "lint": "solhint 'contracts/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
     "test": "hardhat test",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@chainlink/contracts": "^0.5.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "dotenv": "^16.0.3",
     "hardhat": "^2.12.0",
     "husky": "^8.0.1",
