--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,11 @@
 # Network configuration.
-GOERLI_RPC_URL=""
 PRIVATE_KEY=""
+
+## Goerli
+GOERLI_RPC_URL=""
+
+## Mainnet
+ALCHEMY_MAINNET_RPC_URL=""
 
 # Additional services.
 ETHERSCAN_API_KEY=""
