Split Etherscan keys.

--- a/.example.env
+++ b/.example.env
@@ -8,4 +8,5 @@ GOERLI_RPC_URL=""
 ALCHEMY_MAINNET_RPC_URL=""
 
 # Additional services.
-ETHERSCAN_API_KEY=""
+ETHERSCAN_GOERLI_API_KEY=""
+ETHERSCAN_MAINNET_API_KEY=""
