--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "hardhat compile",
     "deploy": "hardhat run --network localhost scripts/deploy.ts",
     "deploy:goerli": "hardhat run --network goerli scripts/deploy.ts",
-    "verify:goerli": "yarn hardhat verify --network goerli 0x5065FF0a95B08C6f14a2B8ceBdFDe5627022F0a0",
+    "verify:goerli": "yarn hardhat verify --network goerli [address]",
     "deploy:mainnet": "hardhat run --network mainnet scripts/deploy.ts",
     "lint": "solhint 'contracts/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.2",
-    "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.0.3",
     "hardhat": "^2.12.0",
     "husky": "^8.0.1",
